<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forecast">Forecast</string>
    <string name="choose_city">Choose city</string>
    <string name="more_on_gismeteo">More on Gismeteo</string>
    <string name="settings">Settings</string>
    <string name="cityName">Location</string>
    <string name="todayTemp">+15°C</string>
    <string name="spb">Saint Petersburg</string>
    <string name="vln">Vilnius</string>
    <string name="bcn">Barcelona</string>
    <string name="msc">Moscow</string>
    <string name="bru">Brussels</string>
    <string name="today">Today</string>
    <string name="settingsTitle">Settings</string>
    <string name="save_settings">Save settings</string>
    <string name="dark_theme">Night mode</string>
    <string name="celcius">Celsius</string>
    <string name="fahrenheit">Farenheit</string>
    <string name="degree">Degree</string>
    <string name="reset_search">Reset search</string>
    <string name="about_wf">About WF</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">About</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressue</string>
    <string name="temperature">Temperature</string>
    <string name="refresh">Refresh</string>
    <string name="cityNotFound">City not found!</string>
    <string name="pressureValue">mmHg</string>
    <string name="windSpeedValue">m/s</string>
    <string name="day_t">Day T:</string>
    <string name="night_t">Night T:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Forecast</string>
    <string name="nav_header_subtitle">rumigor@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search History</string>
    <string name="menu_tools">Tools</string>
    <string name="search">Search</string>
    <string name="exclamation">Error</string>
    <string name="button">OK</string>
    <string name="dialog_message">Choose metrics</string>
    <string name="ok">°C</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="wifiLost">Wireless connection is lost!</string>
    <string name="wififound">Wi-Fi is enabled!</string>
    <string name="filter_by_city">Filter by City</string>
    <string name="delete_all">Delete all</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="open_map">Open map</string>
    <string name="view_weather">View Weather</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="North">N</string>
    <string name="NorthEast">NE</string>
    <string name="East">E</string>
    <string name="SouthEast">SE</string>
    <string name="South">S</string>
    <string name="SouthWest">SW</string>
    <string name="West">W</string>
    <string name="NorthWest">NW</string>
    <string name="sign_out">Sign out</string>
    <string name="day">Day Temperature</string>
    <string name="night">Night Temperature</string>
</resources>